Completed with missing parts

--- a/src/styleSheets/questionStyle.css
+++ b/src/styleSheets/questionStyle.css
@@ -636,3 +636,73 @@ input[type="new-question-answer"]:focus {
         align-items: center;
     }
 }
+
+.student-score {
+    width: 100%;
+    height: 81.7vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.student-score h1 {
+    color: #007bff;
+}
+
+.student-score .bubble {
+    width: 20vh;
+    height: 20vh;
+    position: relative;
+    overflow: hidden;
+}
+
+.student-score .bubble img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.back-button {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 5px 10px;
+    gap: 10px;
+    background-color: #f5f5f5;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    font-size: 12px;
+    color: #007bff;
+    position: absolute;
+    right: 5%;
+    bottom: 5%;
+}
+
+
+.back-button:hover {
+    background-color: #e0e0e0;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    transform: translateY(-1px);
+}
+
+.info {
+    margin-top: 5%;
+}
+
+.info h1, .info h2{
+    margin: 5px;
+}
+
+.study-opt .back-button {
+    color: #714568;
+}
+
+.back-button-icon {
+    font-size: 2.5vh;
+}
+
+.menu .back-button {
+    color: #282c34;
+}
