--- a/src/styleSheets/kinezet.css
+++ b/src/styleSheets/kinezet.css
@@ -2,8 +2,8 @@
     background-image: url("../../public/bg.png");
     position: absolute;
     z-index: -1;
-    min-width: 100%;
-    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     image-orientation: from-image;
